--- a/clock/clock.html
+++ b/clock/clock.html
@@ -137,19 +137,12 @@
 
 <footer>
 
-    <script>
-       function clock(){
-        var today = new Date();
-        var year = today.getFullYear();
+   
 
-        document.getElementById("year").innerHTML = year;
-       } 
-    </script>
-
-    &#169 <span id="year"></span> Peter Maina <br>
+    &#169 2025 Peter Maina <br>
     <a href="https://wa.me/254794797796" target="_blank"> <img src="whatsapp.png" alt="whatsapp contact" width="35" height="35" style="margin-right: 25px;"></a>
     <a href="http://github.com/peteMaina" target="_blank"><img src="github.png" alt="github contact" width="35" height="35" style="margin-right: 25px;"></a>
-    <a href="mailto:peterwahomemaina003#gmail.com" target="_blank"><img src="gmail.png" alt="gmail" width="35" height="35"></a>
+    <a href="mailto:peterwahomemaina003@gmail.com" target="_blank"><img src="gmail.png" alt="gmail" width="35" height="35"></a>
 </footer>
 
 </html>
