Orders page added

--- a/Restautant/home.html
+++ b/Restautant/home.html
@@ -8,6 +8,8 @@
 
     <!-- Link our CSS file -->
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -29,7 +31,7 @@
                         <a href="categories.html">Categories</a>
                     </li>
                     <li>
-                        <a href="foods.html">Foods</a>
+                        <a href="order.html">order</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
@@ -88,7 +90,7 @@
     </section>
     <!-- Categories Section Ends Here -->
 
-    <!-- fOOD MEnu Section Starts Here -->
+    <!-- food menu Section Starts Here -->
     <section class="food-menu">
         <div class="container">
             <h2 class="text-center">Food Menu</h2>
