--- a/Restautant/categories.html
+++ b/Restautant/categories.html
@@ -8,6 +8,8 @@
 
     <!-- Link our CSS file -->
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+
 </head>
 
 <body>
@@ -29,7 +31,7 @@
                         <a href="categories.html">Categories</a>
                     </li>
                     <li>
-                        <a href="foods.html">Foods</a>
+                        <a href="order.html">Order</a>
                     </li>
                     <li>
                         <a href="#">Contact</a>
