--- a/GYM/fitlife.html
+++ b/GYM/fitlife.html
@@ -334,6 +334,7 @@
       }
     }
   </style>
+  <link rel="shortcut icon" href="dumbell_icon.png" type="image/x-icon">
 </head>
 <body>
   <div class="container">
@@ -386,7 +387,7 @@
     <!-- About Section -->
     <section class="about" id="about">
       <div class="about-container">
-        <img src="https://via.placeholder.com/500x300?text=Gym+Facility" alt="Gym Facility">
+        <img src="gym1.jpg" alt="Gym Facility">
         <div class="about-text">
           <h2>About FitLife Gym</h2>
           <p>
@@ -406,12 +407,17 @@
     <section class="gallery" id="gallery">
       <h2>Our Gallery</h2>
       <div class="gallery-grid">
-        <img src="https://via.placeholder.com/300?text=Gym+1" alt="Gym Image 1">
-        <img src="https://via.placeholder.com/300?text=Gym+2" alt="Gym Image 2">
-        <img src="https://via.placeholder.com/300?text=Gym+3" alt="Gym Image 3">
-        <img src="https://via.placeholder.com/300?text=Gym+4" alt="Gym Image 4">
-        <img src="https://via.placeholder.com/300?text=Gym+5" alt="Gym Image 5">
-        <img src="https://via.placeholder.com/300?text=Gym+6" alt="Gym Image 6">
+        <img src="2.jpg" alt="Gym Image 1">
+        <img src="3.jpg" alt="Gym Image 2">
+        <img src="4.jpg" alt="Gym Image 3">
+        <img src="5.jpg" alt="Gym Image 4">
+        <img src="6.jpg" alt="Gym Image 5">
+        <img src="7.jpg" alt="Gym Image 6">
+        <img src="10.jpg" alt="Gym Image 10">
+        <img src="11.jpg" alt="Gym Image 11">
+        <img src="4.jpg" alt="Gym Image 12">
+        <img src="13.jpg" alt="Gym Image 13">
+       
       </div>
     </section>
 
@@ -420,17 +426,17 @@
       <h2>What Our Members Say</h2>
       <div class="testimonials-container">
         <div class="testimonial">
-          <img src="https://via.placeholder.com/100?text=Avatar" alt="Member 1">
+          <img src="member1.jpg" alt="Member 1">
           <h3>John Doe</h3>
           <p>"FitLife Gym changed my life. The trainers and facilities are top-notch!"</p>
         </div>
         <div class="testimonial">
-          <img src="https://via.placeholder.com/100?text=Avatar" alt="Member 2">
+          <img src="member2.jpg" alt="Member 2">
           <h3>Jane Smith</h3>
           <p>"I love the variety of classes available. There's something for everyone!"</p>
         </div>
         <div class="testimonial">
-          <img src="" alt="Member 3">
+          <img src="member3.jpg" alt="Member 3">
           <h3>Mike Johnson</h3>
           <p>"The community at FitLife Gym is amazing. I've met so many supportive people."</p>
         </div>
@@ -443,7 +449,7 @@
       <div class="pricing-cards">
         <div class="pricing-card">
           <h3>Basic Plan</h3>
-          <p class="price">$19.99/month</p>
+          <p class="price">KSH 1,999/month</p>
           <ul>
             <li>Access to gym equipment</li>
             <li>Free fitness consultation</li>
@@ -453,7 +459,7 @@
         </div>
         <div class="pricing-card">
           <h3>Premium Plan</h3>
-          <p class="price">$39.99/month</p>
+          <p class="price">KSH 3,499/month</p>
           <ul>
             <li>Unlimited gym access</li>
             <li>Access to all classes</li>
@@ -463,7 +469,7 @@
         </div>
         <div class="pricing-card">
           <h3>VIP Plan</h3>
-          <p class="price">$59.99/month</p>
+          <p class="price">KSH 5,000/month</p>
           <ul>
             <li>All Premium benefits</li>
             <li>Nutrition planning</li>
@@ -485,7 +491,7 @@
           <button type="submit">Send Message</button>
         </form>
         <div class="contact-info">
-          <img src="https://via.placeholder.com/400x300?text=Map+Placeholder" alt="Map Placeholder">
+          <img src="clerk.jpg" alt="Map Placeholder">
           <p>Visit us at 123 Ruiru street,<br>Ruiru, Kenya</p>
           <p>Email: peterwahomemaina003@gmail.com</p>
           <p>Phone: +254794797796</p>
