--- a/chatai.html
+++ b/chatai.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pete AI</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Profile_Pete.png" type="image/x-icon">
     <style>
         :root {
             --primary-gradient: linear-gradient(135deg, #6e8efb, #a777e3);
