--- a/chatai.html
+++ b/chatai.html
@@ -1036,3 +1036,8 @@
         document.addEventListener('DOMContentLoaded', () => {
             new ChatApp();
         });
+
+    </script>
+</body>
+<footer> &#169 2025 | All rights reserved | Peter Maina </footer>
+</html>
