--- a/amc.html
+++ b/amc.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <div>The conscience of the earths heart, in deep <br>With deep emotional scars comes an even greater childhood  trauma, this is categorized by the world that we are currently living in and it affects every of our interaction with people <br>
-    This l </div>
+    This leaves a person having troubles in the normal interaction, questions being, what can be done to  soothe out this <br>
+    <br>
+    Here in this concept we ask ourselves, do we need therapy, do we need to master and know ourselves?, do we need to heal our emotional scars? Do we need to learn to live with the trauma? </div>
 </body>
 </html>
