--- a/amc.html
+++ b/amc.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <div>The conscience of the earths heart, in deep <br>With deep emotional scars comes an even greater childhood  trauma, this is categorized by the world that we are currently living in and it affects every of our interaction with people <br>
+
+
+
+<body> 
+    <div class="main">
+    <div class="conered">The conscience of the earths heart, in deep <br>With deep emotional scars comes an even greater childhood  trauma, this is categorized by the world that we are currently living in and it affects every of our interaction with people <br>
     This leaves a person having troubles in the normal interaction, questions being, what can be done to  soothe out this <br>
     <br>
-    Here in this concept we ask ourselves, do we need therapy, do we need to master and know ourselves?, do we need to heal our emotional scars? Do we need to learn to live with the trauma? </div>
+    Here in this concept we ask ourselves a couple of questions
+    Do we need therapy? <br>
+    Do we need to master and know ourselves? <br>
+    Do we need to heal our emotional scars? <br>
+    Do we need to learn to live with the trauma? <br>
+    <br>
+    But definately one thing we know that we should not let the emotions from that trauma get the best of us <br>
+    Well you might ask why and It's okay to ask why, Its because emotions drive us to losses <br>
+    In this concept, we end up getting in the hands of mnipulators, they read and analyze us <br>
+    You ask how, these people have trained on it, they get to us and use us potraying as a shoulder <br>
+    You think you've found the best friend or person in life only to find out you were to be used, mercilessly 
+</div>
+</div>
 </body>
 </html>
