--- a/chicks/about.html
+++ b/chicks/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Feathery Friends Farm - About Us</title>
-    <link rel="stylesheet" href="about.css">
+    <title>Feathery Friends Farm | About Us</title>
+    <link rel="stylesheet" href="global.css">
 </head>
+
 <body>
     <header>
         <h1>Feathery Friends Farm</h1>
@@ -15,7 +17,7 @@
     <nav>
         <ul>
             <li><a href="homepage.html">Home</a></li>
-            <li><a href="eggs.html">Eggs</a></li>
+            <li><a href="egg.html">Eggs</a></li>
             <li><a href="chickens.html">Chickens</a></li>
             <li><a href="chicks.html">Chicks</a></li>
             <li><a href="about.html">About Us</a></li>
@@ -25,19 +27,37 @@
     <main>
         <section class="about-us">
             <h2>Our Story</h2>
-            <p>Feathery Friends Farm is a family-owned and operated farm dedicated to providing our community with fresh, high-quality eggs and happy, healthy chickens. We started our journey 3 years ago with a small flock of hens and a passion for sustainable agriculture. Since then, our farm has grown, but our commitment to quality and animal welfare remains at the heart of everything we do.</p>
-            <img src="poultry.jpeg" alt="Farm picture">
-            <p>We believe that happy hens lay the best eggs. That's why we raise our chickens in a humane and stress-free environment, allowing them to roam freely in our spacious pastures. We feed them a nutritious diet of grains, vegetables, and fresh herbs, ensuring they get all the essential vitamins and minerals they need to produce delicious and healthy eggs.</p>
-            <p>To buy or take a tour on our farm you can find our contacts below</p>
-            <p>We also do deliveries at a fee</p>
+            <p>Feathery Friends Farm is a family-owned and operated farm dedicated to providing our community with
+                fresh, high-quality eggs and happy, healthy chickens. We started our journey 3 years ago with a small
+                flock of hens and a passion for sustainable agriculture.</p>
 
+            <div class="video-container">
+                <img src="poultry.jpeg" alt="Farm picture" style="width: 100%; border-radius: 15px;">
+            </div>
+
+            <p>We believe that happy hens lay the best eggs. That's why we raise our chickens in a humane and
+                stress-free environment, allowing them to roam freely in our spacious pastures. We feed them a
+                nutritious diet of grains, vegetables, and fresh herbs, ensuring they get all the essential vitamins and
+                minerals they need to produce delicious and healthy eggs.</p>
+            <p>To buy or take a tour on our farm, you can reach us via the social links below. We also provide delivery
+                services at a competitive fee.</p>
         </section>
     </main>
 
     <footer>
-        <p>&copy; Feathery Friends Farm 2024</p>
-        <p>contact +254794797796</p>
-        <p>Email us at <a href="wahomemaina@zetech.ac.ke">Feathery Friends Farm</a></p>
+        <p>&copy; <span id="year"></span> Feathery Friends Farm | Peter Maina</p>
+        <p>Email: <a href="mailto:wahomemaina@zetech.ac.ke">wahomemaina@zetech.ac.ke</a></p>
+        <div class="social-links">
+            <a href="https://wa.me/254794797796" target="_blank"> <img src="whatsapp.png" alt="whatsapp" width="40"
+                    height="40"></a>
+            <a href="http://github.com/peteMaina" target="_blank"><img src="github.png" alt="github" width="40"
+                    height="40"></a>
+            <a href="mailto:peterwahomemaina003@gmail.com" target="_blank"><img src="gmail.png" alt="gmail" width="40"
+                    height="40"></a>
+        </div>
     </footer>
+
+    <script src="main.js"></script>
 </body>
+
 </html>
